tests/fail/twice_rate.stderr
error: `rate` defined twice
 --> tests/fail/twice_rate.rs:9:40
  |
9 |     let _wave = sine_wave!(rate: 8000, rate: 5000);
  |                                        ^^^^
